@@ -22,8 +22,6 @@ import org.jspecify.annotations.Nullable;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
-import java.util.EnumSet;
 import java.util.Locale;
 import java.util.Set;
 
@@ -42,7 +40,7 @@ final class DateTimeElement implements LogElement {
 
     private static final String COMMON_LOG_PATTERN = "'['dd/MMM/yyyy:HH:mm:ss Z']'";
 
-    private static final Set<Event> LAST_RESPONSE_EVENTS = Collections.unmodifiableSet(EnumSet.of(Event.ON_LAST_RESPONSE_WRITE));
+    private static final Set<Event> LAST_RESPONSE_EVENTS = Set.of(Event.ON_LAST_RESPONSE_WRITE);
 
     private final DateTimeFormatter formatter;
     private final Set<Event> events;
