@@ -19,8 +19,6 @@ import io.netty.channel.socket.SocketChannel;
 import io.netty.handler.codec.http.HttpHeaders;
 import org.jspecify.annotations.Nullable;
 
-import java.util.Collections;
-import java.util.EnumSet;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
@@ -42,7 +40,7 @@ final class ElapseTimeElement implements LogElement {
      */
     public static final String ELAPSE_TIME_MILLIS = "D";
 
-    private static final Set<Event> EVENTS = Collections.unmodifiableSet(EnumSet.of(Event.ON_REQUEST_HEADERS, Event.ON_LAST_RESPONSE_WRITE));
+    private static final Set<Event> EVENTS = Set.of(Event.ON_REQUEST_HEADERS, Event.ON_LAST_RESPONSE_WRITE);
 
     private final boolean inSeconds;
     private long start;
